Add UI improvements: help browser, container editor, status bar enhancements
- Add FXHelpBrowser for node help documentation with grayed icons for unavailable help
- Add FXContainerEditorWindow for editing container node internal pipelines
- Rename CLAHE to "CLAHE Contrast" in node registry
- Move status bar under canvas only (not spanning under preview)
- Add pipeline status and thread count to container editor status bar
- Fix mouse cursor to only show hand on checkbox and help icon
- Add Container I/O nodes (Input/Output) for container editor
- Alphabetize nodes within each category
- Fix restart to use simple JVM restart instead of mvn exec:exec
- Add queue stats display on connectors
- Add input/output frame counters on nodes
- Various UI polish: search box X button, instructions panel, context menus

Co-Authored-By: Claude <noreply@anthropic.com>